# bablib

./: .gitignore  .gitmodules  .qglviewer.xml  CMakeLists.txt  Makefile  README.md  View  convert_bablib_to_utf8.sh  default.par  go_to_solid_voxelisation_project.sh  hybrid_shadow  mipmap.pro  projects  setup.linux
bablib_projects/projects/prog/solid_voxelisation/: .gitignores  .qglviewer.xml  Makefile  View  default.par  log.txt  project_sv.pro  project_sv.pro.user.18
cmake/: FindGLEW.cmake
data/: bablib.par
data/shaders/envgrid/: envgrid.frag
data/shaders/envmap/: envmap.vert
data/shaders/envmap_flatground/: envmap_flatground.frag
data/shaders/gouraud/: gouraud.frag
data/shaders/primitive_id/: primitive_id.vert
docs/: notes_mipmap.txt
projects/prog/shadow_projects/hybrid_shadow/: .qglviewer.xml  Makefile  README.md  View  default.par
projects/prog/shadow_projects/temporal_dsm_clean_v0.9/: .qglviewer.xml  Makefile  View  default.par  output.txt  project_shadow.pro
qprog/: README.md  README.txt  config_project.pri  create_lib.pri  setup.linux
qprog/config/: bablib.par  paths.pri
qprog/data/shaders/envmap_flatground/: envmap_flatground.vert
qprog/libs/argstream/: argstream.h
qprog/libs/bablib/: Makefile  README.md  bablib.pro  bablib.pro.user.3.2-pre1  config.pri  launch_script_diff_sub.sh  script_diff_sub.sh  src
qprog/libs/boost_pp/: config.pri
qprog/libs/constants/: BablibConstants.h  config.pri
qprog/libs/csparse/: Makefile  Makefile.Debug  Makefile.Release  csparse.pro  csparse.sdf  csparse.sln  csparse.vcxproj  csparse.vcxproj.filters  object_script.libcsparse
qprog/libs/glew/: Makefile  glew.vcxproj  glew.vcxproj.filters  log.txt
qprog/libs/lib3ds/: CMakeLists.txt  Makefile  lib3ds.pro  lib3ds.vcxproj  lib3ds.vcxproj.filters  object_script.liblib3ds
qprog/libs/libOrientation/trunk/: CMakeLists.txt  Orientation_install.cmake
qprog/libs/libOrientation/trunk/config/: config_boost.hpp  config_cgal.hpp  config_xerces.hpp
qprog/libs/libOrientation/trunk/config/.svn/: all-wcprops
qprog/libs/libOrientation/trunk/data/: Amiens296.pt  Mairie-090708_0645-22-00001_0000704_1.xml  ORTHO.HDR  Pano_SampleFC.xml  olivier_Projective.xml  orid.xml
qprog/libs/libOrientation/trunk/data/.svn/: all-wcprops  entries
qprog/libs/libOrientation/trunk/geoview/English.lproj/.svn/: entries
qprog/libs/libOrientation/trunk/geoview/libOrientation.xcodeproj/: project.pbxproj
qprog/libs/libOrientation/trunk/geoview/libOrientation.xcodeproj/.svn/: all-wcprops
qprog/libs/libOrientation/trunk/qtcreator-build/: CTestTestfile.cmake  Makefile  Orientation.cbp
qprog/libs/libOrientation/trunk/qtcreator-build/doc/: Doxyfile
qprog/libs/libOrientation/trunk/src/: ConicStereoPair.hpp  auxiliarydata.hpp  distortionpolynomeign.cpp  distortionpolynomeign.hpp  geodesie.cpp  modeleprojection.cpp  modeleprojection.hpp  modeleprojection_in.cpp  modeleprojection_out.cpp  modeleprojectionaxono.cpp  modeleprojectionconique.cpp  modeleprojectionphysique.hpp  modeleprojectionvisitor.hpp  orireader.cpp  projectivetransfo2D.hpp  solar.cpp  systematismecylindrique.cpp  transfo2d.hpp  xmlreader.cpp  xmlwriter.cpp
qprog/libs/libOrientation/trunk/src/.svn/text-base/: ConicStereoPair.cpp.svn-base  auxiliarydata.cpp.svn-base  euclidien.cpp.svn-base  euclidien.hpp.svn-base  geodesieproj4.hpp.svn-base  homographie2d.hpp.svn-base  modeleprojectioncarto.cpp.svn-base  modeleprojectioncarto.hpp.svn-base  modeleprojectionphysique.cpp.svn-base  modeleprojectionphysique.hpp.svn-base  modeleprojectionvisitor.cpp.svn-base  outil_xml.cpp.svn-base  systematismecylindrique.hpp.svn-base
qprog/libs/libOrientation/trunk/src/old/: StereopolisFileReader.hpp
qprog/libs/libOrientation/trunk/src/old/.svn/text-base/: RoadmarkReader.cpp.svn-base
qprog/libs/libOrientation/trunk/testing/: TestOrientationMATIS_NonValidFile.cpp  TestOrientationMATIS_samples.cpp  Test_crop.cpp  testing.py
qprog/libs/libOrientation/trunk/testing/.svn/: all-wcprops
qprog/libs/libOrientation/trunk/testing/.svn/text-base/: TestOrientationMATIS_Projection.cpp.svn-base  TestPairOrientation.cpp.svn-base  con2ori.cpp.svn-base
qprog/libs/libOrientation/trunk/testing/testing_python/.svn/text-base/: checker.py.svn-base
qprog/libs/libpng/: Makefile  config.pri  libpng.pro  libpng.vcxproj  libpng.vcxproj.filters  object_script.liblibpng
qprog/libs/qglviewer/: build_and_install.sh  config.pri  libQGLViewer
qprog/libs/scene3d/: Makefile  config.pri  scene3d.pro  scene3d.vcxproj  scene3d.vcxproj.filters  todo.txt
qprog/libs/zlib/: Makefile  object_script.libzlib  zlib.pro  zlib.vcxproj  zlib.vcxproj.filters
qprog/qtfeatures/: argstream.prf  bablib.prf  boost_pp.prf  cg.prf  constants.prf  cppitertools.prf  csparse.prf  glew.prf  glut.prf  gsl.prf  lib3ds.prf  lib_config.pri  libpng.prf  qglviewer.prf  scene3d.prf  zlib.prf
scripts/: convert_bablib_to_utf8.sh  go_to_hybrid_shadow_project.sh
shaders/GLSL/draw_mipmap/: draw_mipmap.frag  draw_mipmap.frag~  draw_mipmap.vert
sources/: helper_debug.h  helper_debug.h~  helper_destroy.h  helper_destroy.h~  helper_draw.h  helper_draw.h~  helper_init.h  helper_init.h~  helper_preprocess.h  helper_update.h  helper_update.h~  helpers.h  helpers.h~  main.cpp  mipmap.cpp  mipmap.cpp~  mipmap.h  mipmap.h~
src/: Chrono.cpp  Chrono.h  DrawBufferList.h  EnumHelper.h  FrameBuffer.cpp  Image1D.cpp  Image2D.cpp  Kernel1D.h  Ortho2DBoxCamera.h  ShaderGLSL.h  Tab4D.h  Texture.cpp  Vec3.cpp  ViewportGL.cpp
src/.svn/: entries
src/.svn/text-base/: Dir.h.svn-base  DrawBufferList.h.svn-base  EnumLoader.h.svn-base  GLVec.h.svn-base  ImageFunctions.h.svn-base  Kernel1D.cpp.svn-base  Kernel2D.h.svn-base  Params.cpp.svn-base  ProgGLSL.cpp.svn-base  ProgGLSL.h.svn-base  RenderTexture.h.svn-base  Tab2D.h.svn-base  Texture.h.svn-base  TextureBuffer.h.svn-base  TextureSet.h.svn-base  UnitSquareCamera.cpp.svn-base  UnitSquareCamera.h.svn-base  Vec2.cpp.svn-base
src/bablib/: BufferGL.h  Pix2DEvaluator.h  ProgGLSL.h  Random.h  Texture2DArray.h  Vec2.h  VertexBuffer.h  VertexBufferMacros.h
(+1746 files in other folders)
